remove irrelevant code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title ng-bind="title">Bloggie</title>
+    <title>Bloggie</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,300italic,500,100' rel='stylesheet' type='text/css'>
     <link href="bower_components/font-awesome/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
     <link href="assets/css/style.css" rel='stylesheet' type='text/css'>
@@ -46,5 +46,4 @@
     <script src="app/controllers/post.controller.js"></script>
     <script src="app/controllers/error.controller.js"></script>
 </body>
-
 </html>
