add factory / views / controllers

--- a/index.html
+++ b/index.html
@@ -45,5 +45,7 @@
     <script src="app/controllers/posts.controller.js"></script>
     <script src="app/controllers/post.controller.js"></script>
     <script src="app/controllers/error.controller.js"></script>
+
+    <script src="app/services/posts.factory.js"></script>
 </body>
 </html>
