add disqus plugin / edit views / add disqus config info

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body ng-cloak>
     <header>
         <div class="container">
-            <a href="#/" class="logo">Bloggie</a>
+            <a ng-href="#!/" class="logo">Bloggie</a>
             <ul class="social-icons">
                 <li>
                     <a href="#"><i class="fa fa-twitter"></i></a>
@@ -38,6 +38,7 @@
 
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
+    <script src="bower_components/angularUtils-disqus/dirDisqus.js"></script>
 
     <script src="app/app.module.js"></script>
     <script src="app/app.routes.js"></script>
